# nwm_explorer

./: LICENSE  Makefile  README.md  setup.cfg
notebooks/: main.ipynb
src/nwm_explorer/cli/: nwm2gpkg.py
tests/: test_my_cli.py  test_my_package.py
