[metadata]
name = nwm_explorer
version = attr: nwm_explorer._version.__version__
author = Jason A. Regina
author_email = jason.regina@noaa.gov
description = Explore output from the National Water Model through an interactive interface.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT
license_files =
    LICENSE
url = https://github.com/jarq6c/nwm_explorer
project_urls =
    Documentation = https://github.com/jarq6c/nwm_explorer
    Source = https://github.com/jarq6c/nwm_explorer
    Tracker = https://github.com/jarq6c/nwm_explorer/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
package_dir =
    =src
install_requires =
    pandas
    xarray
    geopandas
    ipyleaflet
    jupyterlab
    click
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest
    build
    
[options.entry_points]
console_scripts =
    nwm2gpkg = nwm_explorer.cli.nwm2gpkg:run
    